--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rywal - Transport i Spedycja</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="img/logo.png" id="logo" alt="logo firmowe">
+        <nav>
+            <dl>
+            <ul>o nas</ul>
+            <ul>aktualności</ul>
+            <ul>usługi</ul>
+            <ul>galeria</ul>
+            <ul>kariera</ul>
+            <ul>kontakt</ul>
+        </dl>
+        </nav>
+    </header>
+    <section id="main-background">
+        <img src="" alt="">
+    </section>
 </body>
 </html>
