--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- menu -->
     <header>
-        <img src="img/logo.png" id="logo" alt="logo firmowe">
+        <img id="logo" src="img/logo.gif" alt="campany logo">
         <nav>
             <dl>
-            <ul>o nas</ul>
-            <ul>aktualności</ul>
-            <ul>usługi</ul>
-            <ul>galeria</ul>
-            <ul>kariera</ul>
-            <ul>kontakt</ul>
-        </dl>
+                <ul id="ul1" class="left"><a href="#"><div class="dot"></div><span>o nas</span></a></ul>
+                <ul id="ul2" class="right"><a href="#"><span>aktualności</span><div class="dot"></div></a></ul>
+                <ul id="ul3" class="left"><a href="#"><div class="dot"></div><span>usługi</span></a></ul>
+                <ul id="ul4" class="right"><a href="#"><span>galeria</span><div class="dot"></div></a></ul>
+                <ul id="ul5" class="left"><a href="#"><div class="dot"></div><span>kariera</span></a></ul>
+                <ul id="ul6" class="left"><a href="#"><div class="dot"></div><span>kontakt</span></a></ul>
+            </dl>
         </nav>
     </header>
+    <!-- background -->
     <section id="main-background">
-        <img src="" alt="">
+        <div id="back"></div>
+        <img id="stamp" src="img/pieczatka.gif" alt="additional background graphic">
     </section>
 </body>
 </html>
