--- a/index.html
+++ b/index.html
@@ -18,22 +18,48 @@
     <!-- menu -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-md-3">
                 <header>
-                    <img id="logo" src="img/logo.gif" alt="logo firmowe">
+                    <div id="divLogo">                  
+                        <img id="logo" src="img/logo.gif" alt="logo firmowe">
+                    </div>
                     <nav>
-                        <img id="map" src="img/mapa.gif" alt="mapa graficzna menu" usemap="#map">
-                        <a id="aboutUs" href="#" alt="O nas"><div></div></a>
-                        <a id="news" href="#" alt="Aktualności"><div></div></a>
-                        <a id="services" href="#" alt="Usługi"><div></div></a>
-                        <a id="gallery" href="#" alt="Galeria"><div></div></a>
-                        <a id="career" href="#" alt="Kariera"><div></div></a>
-                        <a id="contact" href="#" alt="Kontakt"><div></div></a>
+                        <img id="map" src="img/mapa.gif" alt="mapa graficzna menu">
+                        <div id="links">     
+                            <a id="aboutUs" href="#onas" alt="O nas"><div class="aInside"></div></a>
+                            <a id="news" href="#aktualnosci" alt="Aktualności"><div class="aInside"></div></a>
+                            <a id="services" href="#uslugi" alt="Usługi"><div class="aInside"></div></a>
+                            <a id="gallery"href="#galria" alt="Galeria"><div class="aInside"></div></a>
+                            <a id="career" href="#kariera" alt="Kariera"><div class="aInside"></div></a>
+                            <a id="contact" href="#kontakt" alt="Kontakt"><div class="aInside"></div></a>
+                        </div>
                     </nav>
                 </header>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-8 col-md-9">
                 <main>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
                 </main>
             </div>
