--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
     <!-- menu -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-4 col-md-3">
+            <div id="divLogo">                  
+                <img id="logo" src="img/logo.gif" alt="logo firmowe">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs col-sm-4 col-md-4 col-lg-3">
                 <header>
-                    <div id="divLogo">                  
-                        <img id="logo" src="img/logo.gif" alt="logo firmowe">
-                    </div>
                     <nav>
                         <img id="map" src="img/mapa.gif" alt="mapa graficzna menu">
                         <div id="links">     
                             <a id="aboutUs" href="#onas" alt="O nas"><div class="aInside"></div></a>
                             <a id="news" href="#aktualnosci" alt="Aktualności"><div class="aInside"></div></a>
                             <a id="services" href="#uslugi" alt="Usługi"><div class="aInside"></div></a>
-                            <a id="gallery"href="#galria" alt="Galeria"><div class="aInside"></div></a>
+                            <a id="gallery"href="#galeria" alt="Galeria"><div class="aInside"></div></a>
                             <a id="career" href="#kariera" alt="Kariera"><div class="aInside"></div></a>
                             <a id="contact" href="#kontakt" alt="Kontakt"><div class="aInside"></div></a>
                         </div>
                     </nav>
                 </header>
             </div>
-            <div class="col-sm-8 col-md-9">
+            <div class="col-sm-8 col-md-8 col-lg-9">
                 <main>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
