--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <title>Rywal - Transport i Spedycja</title>
     <link rel="stylesheet" href="style/style.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
     <!-- background -->
@@ -15,55 +15,52 @@
         <div id="back"></div>
         <img id="stamp" src="img/pieczatka.gif" alt="pieczątka, grafika tła">
     </section>
-    <!-- menu -->
+    <!-- background end-->
+
     <div class="container-fluid">
+        <!-- menu -->
         <div class="row">
-            <div class="col-sm-4 col-md-3">
-                <header>
-                    <div id="divLogo">                  
-                        <img id="logo" src="img/logo.gif" alt="logo firmowe">
-                    </div>
-                    <nav>
-                        <img id="map" src="img/mapa.gif" alt="mapa graficzna menu">
-                        <div id="links">     
-                            <a id="aboutUs" href="#onas" alt="O nas"><div class="aInside"></div></a>
-                            <a id="news" href="#aktualnosci" alt="Aktualności"><div class="aInside"></div></a>
-                            <a id="services" href="#uslugi" alt="Usługi"><div class="aInside"></div></a>
-                            <a id="gallery"href="#galria" alt="Galeria"><div class="aInside"></div></a>
-                            <a id="career" href="#kariera" alt="Kariera"><div class="aInside"></div></a>
-                            <a id="contact" href="#kontakt" alt="Kontakt"><div class="aInside"></div></a>
+            <header class="col bg-white fixed-top">
+                <nav class="navbar navbar-expand-md p-0">
+                    <a class="navbar-brand" href="#">                  
+                        <img src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
+                    </a>
+                    <button class="btn btn-outline-light navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav">
+                        <span class="navbar-toggler-icon align-items-center"><i class="fas fa-bars fa-2x color-custom"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <div class="navbar-nav">   
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="#onas" alt="Podstawowe informacje o firmie Rywal">O nas</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#aktualnosci" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#galria" alt="Galeria zdjęć">Galeria</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#kariera" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#kontakt" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
-                    </nav>
-                </header>
-            </div>
-            <div class="col-sm-8 col-md-9">
-                <main>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem laboriosam excepturi iure quia saepe cum, quisquam deserunt quasi libero natus consequatur reiciendis nostrum, repellendus eius molestiae voluptatem earum suscipit.</p>
-                </main>
-            </div>
+                    </div>
+                </nav>
+            </header>
         </div>
+        <!-- menu end-->
+
+        <!-- main content -->
+        <div class="row mt-5 pt-5 justify-content-center">
+            <main class="col-11 mt-3">
+                <div class="row my-5 align-items-end justify-content-center">
+                    <div class="col-5 col-md-3">
+                        <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
+                    </div>
+                    <div class="col-5 col-md-8 ml-2 ml-md-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
+                </div>
+                <div class="row my-5 align-items-end justify-content-center">
+                    <div class="col-5">
+                        <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
+                    </div>
+                    <div class="col-4" id="mainConBox2"><h5>Nie zawodzimy nawet w najtrudnieszych chwilach.</h5></div>
+                </div>
+            </main>
+        </div>
+        <!-- main content end-->
     </div>
     <script src="script/jquery-3.3.1.min.js"></script>
     <script src="script/bootstrap.bundle.min.js"></script>
