--- a/index.html
+++ b/index.html
@@ -44,19 +44,20 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row mt-5 pt-5 justify-content-center">
-            <main class="col-11 mt-3">
-                <div class="row my-5 align-items-end justify-content-center">
-                    <div class="col-5 col-md-3">
+        <div class="row mt-5 pt-3 justify-content-center">
+            <main class="col-12">
+                <div class="row mr-1 my-5 align-items-end justify-content-end">
+                    <div class="col-4 col-md-3">
                         <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
                     </div>
-                    <div class="col-5 col-md-8 ml-2 ml-md-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
+                    <div class="col-7 col-md-8 ml-2 ml-md-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
                 </div>
                 <div class="row my-5 align-items-end justify-content-center">
-                    <div class="col-5">
+                    <div class="col-9" id="mainConBox2"><h5>Nie zawodzimy nawet w najtrudnieszych chwilach.</h5></div>
+                    <div class="col-4">
                         <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
                     </div>
-                    <div class="col-4" id="mainConBox2"><h5>Nie zawodzimy nawet w najtrudnieszych chwilach.</h5></div>
+                    
                 </div>
             </main>
         </div>
