--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
 
         <!-- main content -->
         <div class="row mt-5 pt-3 justify-content-center">
-            <main class="col-12">
-                <div class="row mr-1 my-5 align-items-end justify-content-end">
-                    <div class="col-5 col-md-3">
-                        <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
+            <main class="col-12 col-md-10 pl-5">
+                <div class="row mr-1 my-5 align-items-end justify-content-start">
+                    <div class="col-5">
+                        <img class="img-fluid mainContentFoto ml-3 mr-0 my-3 my-md-5" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
                     </div>
-                    <div class="col-6 col-md-8 ml-2 ml-md-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
+                    <div class="col-6 col-md-4 ml-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
                 </div>
-                <div class="row ml-5 my-5 align-items-end justify-content-start">
-                        <div class="col-11" id="mainConBox2"><div id="lineVertical"><div id="lineHorizontal"><h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4></div></div></div>
-                    <div class="col-7">
-                        <img class="img-fluid mainContentFoto my-3 my-md-5" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
+                <div class="row ml-5 align-items-end justify-content-start">
+                    <div class="col-7 col-md-9" id="mainConBox2"><h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4>
+                    <div id="lineHorizontal"><div id="lineVertical"></div></div></div>
+                    <div class="col-7 col-md-5">
+                        <img class="img-fluid mainContentFoto my-3" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
                     </div>
                     
                 </div>
