Maincontent first finish

--- a/index.html
+++ b/index.html
@@ -44,22 +44,33 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row mt-5 pt-3 justify-content-center">
-            <main class="col-12 col-md-10 pl-5">
-                <div class="row mr-1 my-5 align-items-end justify-content-start">
-                    <div class="col-5">
-                        <img class="img-fluid mainContentFoto ml-3 mr-0 my-3 my-md-5" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
+        <div class="row mt-5 pt-3">
+            <main class="col">
+                <div class="row ml-1 ml-md-4 ml-lg-1 ml-xl-0 my-5 pt-3 pb-2 pb-md-5 align-items-end justify-content-start">
+                    <div class="col-5 col-xl-4 pr-3 text-right">
+                        <img class="img-fluid mainContentFoto" src="img/tir-01.gif" alt="Zdjęcie dwóch cięzarówek">
                     </div>
-                    <div class="col-6 col-md-4 ml-4 py-3 py-md-5" id="mainConBox1"><h2 id="mainConText1">Jesteśmy zawsze na czas.</h2></div>
-                </div>
-                <div class="row ml-5 align-items-end justify-content-start">
-                    <div class="col-7 col-md-9" id="mainConBox2"><h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4>
-                    <div id="lineHorizontal"><div id="lineVertical"></div></div></div>
-                    <div class="col-7 col-md-5">
-                        <img class="img-fluid mainContentFoto my-3" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
+                    <div class="col-6" id="mainConBox1">
+                        <h2 id="mainConText1">Jesteśmy zawsze na czas.</h2>
                     </div>
-                    
                 </div>
+                <div class="row mr-5 mr-xl-0 mt-lg-2 mt-xl-3 pt-xl-3 justify-content-end">
+                    <div class="col-8 col-xl-6">
+                        <div class="row justify-content-start">
+                            <div class="col-12" id="mainConBox2">
+                                <h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4>
+                            </div>
+                        </div>        
+                        <div class="row justify-content-start">
+                            <div id="lineHorizontal"><div id="lineVertical"></div></div>
+                        </div>
+                        <div class="row justify-content-start"> 
+                            <div class="col">
+                                <img class="img-fluid mainContentFoto" id="Photo2" src="img/tir-02.gif" alt="Zdjęcie holowanej ciężarówki">
+                            </div>
+                        </div>
+                    </div>
+                </div>    
             </main>
         </div>
         <!-- main content end-->
