--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="navbar-brand" href="#start">                  
                         <img id="brandLogo" src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
                     </a>
-                    <button class="btn btn-outline-light navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav">
+                    <button class="btn btn-link navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav">
                         <span class="navbar-toggler-icon align-items-center"><i class="fas fa-bars fa-2x color-custom"></i></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
