--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <main class="col">
                 <div class="row ml-1 ml-md-4 ml-lg-1 ml-xl-0 my-5 pt-3 pb-2 pb-md-5 align-items-end justify-content-start">
                     <div class="col-5 col-xl-4 pr-3 text-right">
-                        <img class="img-fluid mainContentFoto" src="img/tir-01.gif" alt="Dwie ciężarówki">
+                        <img id="mainPic1" class="img-fluid mainContentFoto" src="img/tir-01.gif" alt="Dwie ciężarówki">
                     </div>
                     <div class="col-6" id="mainConBox1">
                         <h2 id="mainConText1">Jesteśmy zawsze na czas.</h2>
@@ -57,7 +57,7 @@
                 <div class="row mr-5 mr-xl-0 mt-lg-2 mt-xl-3 pt-3 pt-xl-3 justify-content-center">
                     <div class="col-8 col-xl-6">
                         <div class="row justify-content-start">
-                            <div class="col-12" id="mainConBox2">
+                            <div class="col-12 col-lg-11" id="mainConBox2">
                                 <h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4>
                             </div>
                         </div>        
@@ -66,7 +66,7 @@
                         </div>
                         <div class="row justify-content-start"> 
                             <div class="col">
-                                <img class="img-fluid mainContentFoto" id="Photo2" src="img/tir-02.gif" alt="Holowana ciężarówka">
+                                <img class="img-fluid mainContentFoto" id="mainPic2" src="img/tir-02.gif" alt="Holowana ciężarówka">
                             </div>
                         </div>
                     </div>
