--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="start" class="container-fluid">
         <!-- menu -->
         <div class="row">
-            <header id="navbar" class="col bg-white fixed-top">
+            <header id="navbar" class="shadow col bg-white fixed-top">
                 <nav class="navbar navbar-expand-md p-0">
                     <a class="navbar-brand" href="#start">                  
                         <img id="brandLogo" src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
@@ -35,7 +35,7 @@
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#galria" alt="Galeria zdjęć">Galeria</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#kariera" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#contact" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
                     </div>
                 </nav>
@@ -48,7 +48,7 @@
             <main class="col">
                 <div class="row ml-1 ml-md-4 ml-lg-1 ml-xl-0 my-5 pt-3 pb-2 pb-md-5 align-items-end justify-content-start">
                     <div class="col-5 col-xl-4 pr-3 text-right">
-                        <img id="mainPic1" class="img-fluid mainContentFoto" src="img/tir-01.gif" alt="Dwie ciężarówki">
+                        <img id="mainPic1" class="shadow img-fluid mainContentFoto" src="img/tir-01.gif" alt="Dwie ciężarówki">
                     </div>
                     <div class="col-6" id="mainConBox1">
                         <h2 id="mainConText1">Jesteśmy zawsze na czas.</h2>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="row justify-content-start"> 
                             <div class="col">
-                                <img class="img-fluid mainContentFoto" id="mainPic2" src="img/tir-02.gif" alt="Holowana ciężarówka">
+                                <img class="shadow img-fluid mainContentFoto" id="mainPic2" src="img/tir-02.gif" alt="Holowana ciężarówka">
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
             </main>
         
             <div class="row">
-                <div class="col py-5 bg-light">
+                <div class="shadow col py-5 bg-light">
                     <div class="row px-3">
                         <div class="col-sm-7 col-lg-6 mx-lg-4">
                             <h1 class="text-dark">Header</h1>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-            <div id="contact" class="row justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-10 py-5">
                     <div class="row px-1 mx-1 px-md-5 mx-md-5 my-3 py-3 my-lg-4 py-lg-4 my-xl-5 py-xl-5 justify-content-center">
                         <h1 class="text-dark">Header</h1>
@@ -95,17 +95,32 @@
                     </div>    
                 </div>
             </div>
-            <div class="row">
-                <div id="gpsSymbolPic" class="col bg-dark"></div>
+        </div>
+        <!-- main content end-->
+
+        <!-- contact -->
+        <div class="row justify-content-center">
+            <div id="gpsSymbolPic" class="col py-3 py-md-4 py-lg-5">
+                <div class="font-weight-bolder col-8 col-sm-5 col-md-4 pl-sm-3 col-lg-3 pl-lg-4 pl-xl-5 mx-auto mt-4 mt-sm-3 my-md-4 my-lg-5">
+                    <h5 class="mb-0">Adres:</h5>
+                    <p class="mb-0">ul. Grunwaldzka 20</p>
+                    <p>80-000 Człuchów</p>
+                    <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark">Tel: +48 555-55-55</a></h5>
+                    <h5 class="my-0">E-mail:</h5>
+                    <h5 class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark">biuro@rywal.pl</a></h5>
+                </div>
             </div>
-        </div>    
+        </div>
+        <!-- contact end-->
+
+        <!-- footer -->
         <div class="row">
-            <footer class="col py-2 bg-light text-dark text-right">
+            <footer class="shadow-lg col py-2 bg-light text-dark text-right">
                 <p>Copyright &copy; 2019 TribusK2</p> 
             </footer>
         </div>
+        <!-- footer end-->
         
-        <!-- main content end-->
     </div>
     <script src="script/jquery-3.3.1.min.js"></script>
     <script src="script/bootstrap.bundle.min.js"></script>
