--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <div class="navbar-nav">   
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="#onas" alt="Podstawowe informacje o firmie Rywal">O nas</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#aktualnosci" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="news.html" alt="Nasze aktualności">Aktualności</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#galria" alt="Galeria zdjęć">Galeria</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#kariera" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
@@ -116,7 +116,7 @@
         <!-- footer -->
         <div class="row">
             <footer class="shadow-lg col py-2 bg-light text-dark text-right">
-                <p>Copyright &copy; 2019 TribusK2</p> 
+                <p>Copyright &copy; 2019 <a class="text-dark" href="https://tribusk2.pl/">TribusK2</a></p> 
             </footer>
         </div>
         <!-- footer end-->
