--- a/news.html
+++ b/news.html
@@ -59,8 +59,8 @@
                         <p class="newsDate">02.05.2019</p> 
                     </div>
                     <div class="col-sm-6">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium.</p>
-                        <p id="news001" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, necessitatibus eligendi? Vel saepe distinctio exercitationem.</p>
+                        <p id="news001" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat magnam nisi culpa alias ducimus id dignissimos itaque fugiat facere sed!</p>
                         <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news001" aria-expanded="false">Czytaj dalej . . .</button>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
             <div class="shadow col py-5 bg-light">
                 <div class="row px-3 justify-content-center">
                     <div class="col-sm-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium.</p>
-                            <p id="news002" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, sunt quasi fuga fugiat illo dicta!</p>
+                            <p id="news002" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
                             <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news002" aria-expanded="false">Czytaj dalej . . .</button>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3 order-first order-sm-last">
@@ -103,8 +103,8 @@
                         <p class="newsDate">02.05.2019</p> 
                     </div>
                     <div class="col-sm-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium.</p>
-                            <p id="news003" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates harum dignissimos tempora dolor sit ea!</p>
+                            <p id="news003" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eveniet, placeat distinctio saepe quasi tempora quaerat eaque ad laudantium expedita?</p>
                             <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news003" aria-expanded="false">Czytaj dalej . . .</button>
                     </div>
                 </div>
